# swarmit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  swarmit-bootloader-dotbot-v2.emProject  swarmit-bootloader-dotbot-v3.emProject  swarmit-bootloader-nrf5340dk.emProject  swarmit-netcore.emProject  swarmit-sample-dotbot-v2.emProject  swarmit-sample-dotbot-v3.emProject  swarmit-sample-nrf5340dk.emProject  tox.ini
.github/: release.yml
.github/workflows/: continuous-integration.yml
device/bootloader/: bootloader-app.emProject
device/bootloader/Setup/: MemoryMap.xml  flash_placement.xml  nRF_Target.js
device/bootloader/Source/: battery.c  battery.h  cmse_implib.c  cmse_implib.h  device.h  ipc.c  ipc.h  lh2_calibration.h  localization.c  localization.h  main.c  mari.c  mari.h  nvmc.c  nvmc.h  protocol.c  protocol.h  radio.h  rng.c  rng.h  tz.c  tz.h
device/bootloader/System/: clock.c  clock.h  fault_handlers.c  fault_handlers.h  startup.c  system_init.c
device/network_core/: netcore-app.emProject
device/network_core/Setup/: MemoryMap.xml  flash_placement.xml  nRF_Target.js  nrf5340_network_Registers.xml
device/network_core/Source/: ipc.h  main.c  protocol.c  protocol.h
device/network_core/System/: fault_handlers.c  startup.c  system_init.c
sample/Setup/: MemoryMap.xml  flash_placement.xml
sample/Source/: main.c
sample/System/: fault_handlers.c  fault_handlers.h  startup.c
testbed/cli/: main.py
testbed/swarmit/: adapter.py  controller.py  protocol.py
